Page by page scanner for training set up

--- a/train_set.ipynb
+++ b/train_set.ipynb
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -684,10 +684,46 @@
       "Folicello, \"Il Rosso\" Lambrusco Grasparossa NV Emilia Romagna, ITA 44bubbles\n",
       "\n",
       "DONE EXTRACTING TEXT\n",
-      "Parsing pages: 9\n",
+      "\n",
+      "Processing page 1/9\n",
+      "Page 1 text length: 1337 characters\n",
+      "Found 18 wines on page 1\n",
+      "\n",
+      "Processing page 2/9\n",
+      "Page 2 text length: 2141 characters\n",
+      "Found 30 wines on page 2\n",
+      "\n",
+      "Processing page 3/9\n",
+      "Page 3 text length: 1366 characters\n",
+      "Found 19 wines on page 3\n",
+      "\n",
+      "Processing page 4/9\n",
+      "Page 4 text length: 1392 characters\n",
+      "Found 21 wines on page 4\n",
+      "\n",
+      "Processing page 5/9\n",
+      "Page 5 text length: 921 characters\n",
+      "Found 13 wines on page 5\n",
+      "\n",
+      "Processing page 6/9\n",
+      "Page 6 text length: 2126 characters\n",
+      "Found 31 wines on page 6\n",
+      "\n",
+      "Processing page 7/9\n",
+      "Page 7 text length: 1226 characters\n",
+      "Found 20 wines on page 7\n",
+      "\n",
+      "Processing page 8/9\n",
+      "Page 8 text length: 991 characters\n",
+      "Found 14 wines on page 8\n",
+      "\n",
+      "Processing page 9/9\n",
+      "Page 9 text length: 1284 characters\n",
+      "Error parsing wine list: Expecting ',' delimiter: line 97 column 24 (char 2254)\n",
+      "Found 0 wines on page 9\n",
       "PARSING WINE LIST\n",
       "DONE PARSING WINE LIST\n",
-      "TOTAL WINES:  25\n",
+      "TOTAL WINES:  166\n",
       "\n",
       "Saved corrected data to: menus/rake-wine.csv\n"
      ]
@@ -715,25 +751,34 @@
     "    print(pages[1])\n",
     "    print(\"DONE EXTRACTING TEXT\")\n",
     "\n",
-    "    if page_nums > 0:\n",
-    "        print(f\"Parsing pages: {page_nums}\")\n",
-    "        text = []\n",
-    "        for i in range(1, page_nums + 1):\n",
-    "            text.append(pages[i])\n",
-    "        text = \"\\n\".join(text)\n",
-    "        results = parser.parse_wine_list(text)\n",
-    "    else:\n",
-    "        print(\"Parsing all pages\")\n",
-    "        text = []\n",
-    "        for i in range(1, max(pages.keys())):\n",
-    "            text.append(pages[i])\n",
-    "        text = \"\\n\".join(text)\n",
-    "        results = parser.parse_wine_list(text)\n",
+    "    max_pages = max(pages.keys())\n",
+    "    pages_to_process = page_nums if page_nums > 0 else max_pages\n",
+    "\n",
+    "    # Process each page individually\n",
+    "    all_results = []\n",
+    "    for page_num in range(1, pages_to_process + 1):\n",
+    "        print(f\"\\nProcessing page {page_num}/{pages_to_process}\")\n",
+    "        page_text = pages[page_num]\n",
+    "        print(f\"Page {page_num} text length: {len(page_text)} characters\")\n",
+    "        \n",
+    "        # Skip empty pages\n",
+    "        if not page_text.strip():\n",
+    "            print(f\"Skipping page {page_num} - empty text\")\n",
+    "            continue\n",
+    "            \n",
+    "        # Parse the page\n",
+    "        try:\n",
+    "            page_results = parser.parse_wine_list(page_text)\n",
+    "            print(f\"Found {len(page_results)} wines on page {page_num}\")\n",
+    "            all_results.extend(page_results)\n",
+    "        except Exception as e:\n",
+    "            print(f\"Error parsing page {page_num}: {str(e)}\")\n",
+    "            continue\n",
     "\n",
     "    print(\"PARSING WINE LIST\")\n",
     "    print(\"DONE PARSING WINE LIST\")\n",
     "    # Convert to DataFrame\n",
-    "    df = pd.DataFrame(results)\n",
+    "    df = pd.DataFrame(all_results)\n",
     "    print(\"TOTAL WINES: \", len(df))\n",
     "    if editor:\n",
     "        # Display DataFrame for review\n",
@@ -762,8 +807,9 @@
     "    csv_path = pdf_path.rsplit('.', 1)[0] + '.csv'\n",
     "    df.to_csv(csv_path, index=False)\n",
     "    print(f\"\\nSaved corrected data to: {csv_path}\")\n",
+    "    return df\n",
     "\n",
-    "create_csv_menu('menus/rake-wine.pdf', page_nums=9, editor=False)"
+    "df = create_csv_menu('menus/rake-wine.pdf', page_nums=9, editor=False)"
    ]
   },
   {
