Initial front end testing

--- a/train_set.ipynb
+++ b/train_set.ipynb
@@ -775,6 +775,9 @@
     "            print(f\"Error parsing page {page_num}: {str(e)}\")\n",
     "            continue\n",
     "\n",
+    "        # Add page number to all_results\n",
+    "        \n",
+    "\n",
     "    print(\"PARSING WINE LIST\")\n",
     "    print(\"DONE PARSING WINE LIST\")\n",
     "    # Convert to DataFrame\n",
